# resume-tailor-agent

./: .env.example  .gitignore  AGENT_CONTEXT.md  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/core/: events.py  models.py
backend/app/memory/: conversation.py  experience_embedder.py  long_term.py  user_profile.py
backend/app/modules/chat/: router.py  schemas.py  service.py
backend/app/modules/resume_tailor/: agent.py  router.py  schemas.py  service.py
backend/app/modules/resume_tailor/nodes/: evidence_guard.py  file_parser.py  parse_jd.py  render_pdf.py  tailor_resume.py  text_export.py
backend/app/modules/resume_tailor/prompts/: evidence_check.txt  tailor_system.txt
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: chat-panel.tsx  resume-workspace.tsx
